Styling Updates # Fix Category Page Layout for Last Row # Vertically Align HP Album Desc In Center

--- a/css/src/layout/_category.scss
+++ b/css/src/layout/_category.scss
@@ -14,26 +14,26 @@
     .cat-content {
         display: flex;
         flex-wrap: wrap;
-        justify-content: space-between;
+        justify-content: flex-start;
     }
     div.card {
-        @media screen and ($bp-960) {
+
+        &:nth-of-type(3n-1),
+        &:nth-of-type(3n-2) {
+            @media screen and ($bp-960-min) {
+                margin-right: 3%;
+            }
+        }
+        @media screen and ($bp-660-min) and ($bp-960) {
             width: 48.5%;
+            &:nth-of-type(2n-1) {
+                margin-right: 3%;
+            }
         }
         @media screen and ($bp-660) {
             width: 100%;
             margin-bottom: 40px;
-        }
-        // Fix alignment of last row
-        &:nth-last-of-type(2) {
-            @media screen and ($bp-960-min) {
-                margin-left: 3%;
-            }
-        }
-        &:last-of-type {
-            @media screen and ($bp-660-min) {
-                margin-left: 3%;
-            }
+            margin-right: 0;
         }
     }
 }
