--- a/style.css
+++ b/style.css
@@ -602,10 +602,6 @@ img {
         margin-left: 50%; }
       .featured-albums div.album .albumdesc {
         background: #f6f6f6; }
-        .featured-albums div.album .albumdesc a {
-          display: flex;
-          align-items: center;
-          flex-direction: column; }
         .featured-albums div.album .albumdesc h2 {
           font-size: 2em;
           width: 100%; }
@@ -637,7 +633,10 @@ img {
     display: block;
     height: 100%;
     position: relative;
-    text-align: center; }
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center; }
   @media screen and (max-width: 575px) {
     .albumdesc p {
       display: none; } }
@@ -683,20 +682,20 @@ img {
   #category .cat-content {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between; }
-  @media screen and (max-width: 959px) {
+    justify-content: flex-start; }
+  @media screen and (min-width: 960px) {
+    #category div.card:nth-of-type(3n-1), #category div.card:nth-of-type(3n-2) {
+      margin-right: 3%; } }
+  @media screen and (min-width: 660px) and (max-width: 959px) {
     #category div.card {
-      width: 48.5%; } }
+      width: 48.5%; }
+      #category div.card:nth-of-type(2n-1) {
+        margin-right: 3%; } }
   @media screen and (max-width: 660px) {
     #category div.card {
       width: 100%;
-      margin-bottom: 40px; } }
-  @media screen and (min-width: 960px) {
-    #category div.card:nth-last-of-type(2) {
-      margin-left: 3%; } }
-  @media screen and (min-width: 660px) {
-    #category div.card:last-of-type {
-      margin-left: 3%; } }
+      margin-bottom: 40px;
+      margin-right: 0; } }
 
 #blog-content-area .heading-container {
   padding: 5% 15px 3.5% 15px;
